--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,77 @@
-# Prerequisites
-*.d
-
-# Object files
 *.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
+*.swp
+._.DS_Store
+*.so
+*.log
 *.a
 *.la
 *.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
+*.Po
+*.class
+*.anjuta
+*.aux
+*.log
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+*.toc
+*.nav
+*.pdf
+build*
+ar-lib
+.idea/
+.cproject
+TODO.tasks
+.fuse_hidden*
+.project
+.anjuta_sym_db.db
+.version
+.project
+.cdtproject
+.settings
+.libs/
+.gradle
+.anjuta/
+build/
+build-*
+libtool
+autom4te.cache
+config.guess
+missing
+ltmain.sh
+compile
+config.sub
+Makefile.in
+depcomp
+aclocal.m4
+config.h.in~
+configure
+install-sh
+src/.deps/
+lib/.deps/
+lic/.deps/
+stamp-h1
+bin/*
+docs/*
+licgen/license2
+.DS_Store
+tags
+nbproject/
+\#*\#
+.\#*
+*.h~
+*.c~
+GPATH
+GRTAGS
+GSYMS
+GTAGS
+cmake-build-*
+.vscode
+lex.*
+y.tab.*
+lexer.*
+yacc.*
+Makefile
+*.tar.gz
+.deps/*
+config.status
+m4/*
+!m4/.hold
