--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -11,6 +11,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: rebuild
       run: autoreconf -i  
+    - name: dependencies
+      run: apt install -y libldap2-dev  
     - name: configure
       run: ./configure
     - name: make
