--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -19,3 +19,10 @@ jobs:
       run: ./configure
     - name: make
       run: make
+    - name: Upload artifact
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        # Artifact name
+        name: plugin 
+        # Directory containing files to upload
+        path: ./libs/flopsar-ldap.so
